--- a/esp8266/html/index.html
+++ b/esp8266/html/index.html
@@ -6,8 +6,8 @@
 
 <script language="javascript" type="text/javascript">
 
-  //var wsUri = "ws://"+window.location.host+"/websocket/ws.cgi";
-  var wsUri = "ws://192.168.10.237/drive-ws.cgi";
+  var wsUri = "ws://"+window.location.host+"/drive-ws.cgi";
+
   var output;
 
   function init()
@@ -55,10 +55,7 @@
 
   function writeToScreen(message)
   {
-    var pre = document.createElement("p");
-    pre.style.wordWrap = "break-word";
-    pre.innerHTML = message;
-    output.appendChild(pre);
+    output.innerHTML = "<p>" + message + "</p>";
   }
 
   window.addEventListener("load", init, false);
@@ -67,12 +64,13 @@
 
 <style>
 #joystick {
-    width		: 600px;
+    width		: 100%;
     height		: 600px;
     padding		: 0;
     margin		: 0;
     -webkit-user-select	: none;
     -moz-user-select	: none;
+    background-color: lightgray;
 }
 </style>
 
@@ -87,6 +85,7 @@
 
 <script src="virtualjoystick.js"></script>
 <script>
+ var stopMessage = {"drive_mode": "direct", "velocities": [0,0] };
  console.log("touchscreen is", VirtualJoystick.touchScreenAvailable() ? "available" : "not available");
 
  var joystick	= new VirtualJoystick({
@@ -98,14 +97,27 @@
  })
  joystick.addEventListener('touchEnd', function(){
   console.log('up')
-  doSend('s')
+  doSend(JSON.stringify(stopMessage))
  })
 
  setInterval(function(){
-  if (joystick.right()) doSend('r')
-  if (joystick.left()) doSend('l')
-  if (joystick.up()) doSend('f')
-  if (joystick.down()) doSend('b')
+  //if (joystick.right()) doSend('r')
+  //if (joystick.left()) doSend('l')
+  //if (joystick.up()) doSend('f')
+  //if (joystick.down()) doSend('b')
+  var message = stopMessage;
+  var x = joystick.deltaX()/12;
+  var y = joystick.deltaY()/12;
+  var l = - x - y;
+  var r = x - y;
+  if (l > 31) l = 31;
+  if (l < -31) l = -31;
+  if (r > 31) r = 31;
+  if (r < -31) r = -31;
+  message.velocities[0] = Math.round(l);
+  message.velocities[1] = Math.round(r);
+  doSend(JSON.stringify(message))
+
   var outputEl	= document.getElementById('result');
                 outputEl.innerHTML	= '<b>Result:</b> '
                     + ' dx:'+joystick.deltaX()
@@ -114,6 +126,6 @@
                     + (joystick.up()	? ' up'		: '')
                     + (joystick.left()	? ' left'	: '')
                     + (joystick.down()	? ' down' 	: '')
-            }, 1/30 * 1000);
+            }, 50);
         </script>
 <div id="output"></div>
