Hacking a light button

--- a/esp8266/html/index.html
+++ b/esp8266/html/index.html
@@ -1,7 +1,8 @@
 <html>
  <head>
   <meta charset="utf-8" />
-  <title>WebSocket Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Pongo</title>
   <script language="javascript" type="text/javascript">
    var wsUri = "ws://"+window.location.host+"/drive-ws.cgi";
    var output;
@@ -10,6 +11,12 @@
     output = document.getElementById("output");
     testWebSocket();
    }
+
+    function toggle() {
+        var ajax = new XMLHttpRequest();
+        ajax.open("POST", "led.cgi");
+        ajax.send("led=t");
+    }
 
    function testWebSocket()
    {
@@ -75,6 +82,14 @@
     text-align	: left;
     font-size   : small;
    }
+   #bottom {
+       position: absolute;
+       bottom: 0;
+       width: 100%;
+       padding		: 5px;
+       text-align	: left;
+       font-size   : small;
+   }
    #joystick {
     width		: 100%;
     height		: 100%;
@@ -85,15 +100,20 @@
     -moz-user-select	: none;
     background-color: lightgray;
    }
+   .big-btn {
+       width: 90px;
+       height: 40px;
+   }
   </style>
  </head>
  <body>
   <div id="joystick"></div>
   <div id="info">
-   <h2>Touch to drive Buksi</h2>
+   <h2>Touch to drive Pongo</h2>
    <div id="result"></div>
    <div id="output"></div>
   </div>
+  <div id="bottom"><button class="big-btn" onclick="toggle();">Light</button></div>
 
   <script src="virtualjoystick.js"></script>
   <script>
